fix title spacing on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -87,4 +87,8 @@ a:hover {
   .tagline {
     font-size: 25px;
   }
+  .title {
+    margin-block-start: 20px;
+    margin-block-end: 20px;
+  }
 }
